<resources>

    <!-- Generic -->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish wizard</string>

    <!-- Welcome and First-->
    <string name="app_name" translatable="false">Relight Setup</string>
    <string name="sw_f_greet">Welcome to Relight</string>
    <string name="sw_f_start">Start</string>
    <string name="sw_f_emerg">Emergency call</string>
    <string name="sw_f_acces">Vision settings</string>

    <!-- Info screen -->
    <string name="sw_is_top_title">Welcome to Relight!</string>
    <string name="sw_is_top_summary">Relight is a fork of Project Radiant, a custom ROM using the HarmonyOS Sans font. We\'re glad to have you with us. You can change the language or configure accesibility options via the icons above. Here are some points we wish to inform you about: </string>
    <string name="sw_is_tg_summary">You can join our Telegram channel @ProjectRadiant for ROM and build update posts alongside screenshots and teasers!</string>
    <string name="sw_is_bug_title">Bug reports</string>
    <string name="sw_is_bug_summary">You can report source/ROM bugs in our ROM chat at @ProjectRadiantChat. Make sure to attach logcats!</string>
    <string name="sw_is_ep_title">Early preview</string>
    <string name="sw_is_ep_summary">This is an early preview of Relight. Things might be unstable.</string>
    <string name="sw_is_tr_title">Translations</string>
    <string name="sw_is_tr_summary">You can help us with localisation by checking the crowdin link in our chat\'s notes and translating the ROM in your language.</string>
    <string name="sw_is_help_title">We need you!</string>
    <string name="sw_is_help_summary">Relight isn't developed by many people, which is why we need more people. You can help people with issues in our chats or even join us to maintain or develop the ROM.</string>


    <!-- Navigation gestures -->
    <string name="sw_ng_top_title">How would you like to get around?</string>
    <string name="sw_ng_gestures">Gestures</string>
    <string name="sw_ng_three">3 buttons</string>
    <string name="sw_ng_gtut_title">Gesture tutorial</string>
    <string name="sw_ng_gtut_summary">Start a tutorial for navigation gestures after this screen</string>

</resources>
