<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SecondWelcomeActivity">

    <ImageView
        android:id="@+id/topPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/kekas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/topll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPad">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="langBtnClick"
            android:src="@drawable/ic_baseline_language_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="accessBtnClick"
            android:src="@drawable/ic_baseline_accessibility_new_24" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/topll"
            app:layout_constraintBottom_toTopOf="@id/cardcont"
            android:weightSum="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kekas">


        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".0466666666667" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.90666666667"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:id="@+id/title"
                    app:layout_constraintBottom_toTopOf="@id/summary"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/sw_is_top_title"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:id="@+id/summary"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    android:singleLine="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/sw_is_top_summary"
                    android:textSize="14sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".0466666666667" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/cardcont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/buttonlays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topll">


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.90666666667">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bugone"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bugtwo"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_fluent_info_24_regular"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bugtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Telegram"
                        android:textSize="20sp"
                        android:textColor="?android:attr/textColorPrimary" />


                    <TextView
                        android:id="@+id/bugsum"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:text="@string/sw_is_tg_summary"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintTop_toBottomOf="@id/bugtext" />

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bugtwo"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bugthree"
                app:layout_constraintTop_toBottomOf="@id/bugone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:id="@+id/img2"
                android:src="@drawable/ic_fluent_broom_24_regular"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sw_is_bug_title"
                    android:textSize="20sp"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorSecondary"
                    android:text="@string/sw_is_bug_summary"
                    app:layout_constraintTop_toBottomOf="@id/bugtext" />

            </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bugthree"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bugfour"
                app:layout_constraintTop_toBottomOf="@id/bugtwo">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img3"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_fluent_translate_24_regular"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sw_is_tr_title"
                        android:textSize="20sp"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:textColor="?android:attr/textColorSecondary"
                        android:text="@string/sw_is_tr_summary"
                        app:layout_constraintTop_toBottomOf="@id/bugtext" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bugfour"
                android:layout_marginVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bugthree">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/img4"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_fluent_person_24_regular"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sw_is_help_title"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="14sp"
                        android:textColor="?android:attr/textColorSecondary"
                        android:text="@string/sw_is_help_summary"
                        app:layout_constraintTop_toBottomOf="@id/bugtext" />

                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonlays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/bottomPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />

        <Button
            android:id="@+id/bck"
            style="@style/rdntBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:onClick="backBtnClick"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.90666666666" />


        <Button
            android:id="@+id/nxt"
            style="@style/rdntBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:onClick="nextBtnClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/keka"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />

    </LinearLayout>

    <ImageView
        android:id="@+id/bottomPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>