<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".NavigationPickerActivity">

    <ImageView
        android:id="@+id/topPad"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/cardcont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPad">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.82833333333"
            android:singleLine="false"
            android:text="@string/sw_ng_top_title"
            android:textColor="#000000"
            android:textSize="30sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".125" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardcont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".0466666666667" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".43"
                android:orientation="vertical"
                android:id="@+id/butlayout"
                android:weightSum="1">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/threebut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#f2f2f2"
                    app:cardCornerRadius="20dp"
                    app:strokeColor="?attr/colorOnSurfaceVariant"
                    app:strokeWidth="5dp">


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/wall" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/button" />

                    </FrameLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MaterialAlertDialog.Material3.Body.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/buttext"
                    android:text="@string/sw_ng_three"
                    android:textColor="?attr/colorOnSurfaceVariant" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".0466666666667" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".43"
                android:id="@+id/gestlayout"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/gest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#f2f2f2"
                    app:cardCornerRadius="20dp"
                    app:strokeColor="?attr/colorOnSurfaceVariant"
                    app:strokeWidth="5dp">


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/wall" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/navbar" />

                    </FrameLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MaterialAlertDialog.Material3.Body.Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/gesttext"
                    android:text="@string/sw_ng_gestures"
                    android:textColor="?attr/colorOnSurfaceVariant" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".0466666666667" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"            android:id="@+id/optbox"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".0466666666667" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sw_ng_gtut_title"
                    android:id="@+id/gestsum"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gestsumma"
                    android:text="@string/sw_ng_gtut_summary"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".30666666667" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/Switch.SettingsLib"
                android:layout_width="wrap_content"
                android:id="@+id/gestSwitch"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".0466666666667" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@id/bottomPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />

        <Button
            android:id="@+id/emerg"
            style="@style/rdntBtn"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.90666666666" />


        <Button
            android:id="@+id/cap"
            style="@style/rdntBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stateListAnimator="@null"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/keka"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".0466666666667" />

    </LinearLayout>

    <ImageView
        android:id="@+id/bottomPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>